--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.15.1",
     "react-resizable-panels": "^2.1.7",
+    "resend": "^6.9.1",
     "stripe": "^17.7.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
