--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "@stripe/stripe-js": "^5.10.0",
     "@supabase/supabase-js": "^2.93.2",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "@uiw/react-md-editor": "^4.0.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.29.2",
+    "highlight.js": "^11.11.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.474.0",
     "micro": "^10.0.1",
@@ -58,6 +60,7 @@
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.15.1",
+    "react-quill": "^2.0.0",
     "react-resizable-panels": "^2.1.7",
     "resend": "^6.9.1",
     "stripe": "^17.7.0",
